
syntax = "proto3";

package UserPosition;

import "google/protobuf/empty.proto";

message UserPositionReq {
    string city = 1;
    string id = 2;
    int32 log = 3;
    int32 lat = 4;
}

message UserPositionList {
    repeated UserPositionReq usersPositions = 1;
}

service UserPosition {
    rpc SyncUserPosition(stream UserPositionReq) returns (stream UserPositionList) {};
}